@@ -30,6 +30,7 @@ Version 1.13.1+dev:
      option previously found in Preferences -> General.
  * WML engine:
    * Added support for mod_x,mod_y= in [terrain_graphics].
+   * Added support for has_flag= in terrain graphics [variant].
  * Miscellaneous and bug fixes:
    * Fixed Generate Map dialog bug that caused last choice of map
      generator to not be actually selected (bug #23711).
